# standup

./: .gitignore  AGENTS.md  pyproject.toml
.devcontainer/: devcontainer.json
src/standup/: __init__.py  cli.py  todoist.py
