[project]
name = "standup"
version = "0.1.0"
description = "Generate standup markdown from Todoist tasks"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
standup = "standup.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
